--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ html {
 body {
     width: 100%;
     min-height: 100vh;
-    background-color: var(--gradient);
+    background-image: var(--gradient);
 }
 
 main {
