--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ section {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    vertical-align: top;
 }
 
 .layer1 {
