--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ section {
     display: flex;
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 600px) {
     .heading {
         font-size: 0.8rem;
     }
@@ -248,7 +248,14 @@ h1, p, h3, h4 {
     }
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 600px) {
+
+    section {
+        padding-left:  10vw;
+        padding-right:  10vw;
+    }
+
+
     .nav-item:first-child {
         margin-top: 20%;
     }
@@ -262,7 +269,7 @@ h1, p, h3, h4 {
     }
 }
 
-@media all and (max-width: 500px) {
+@media all and (max-width: 600px) {
 
     main {
         margin-left: 0;
