--- a/style.css
+++ b/style.css
@@ -407,3 +407,70 @@ table {
 }
 
 /* table*/
+
+/* skills */
+
+.skill-name {
+    width: 100%;
+    z-index: 1;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.skill-name span {
+    z-index: 2;
+}
+
+.skills {
+    display: flex;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.9rem;
+}
+
+.skills img {
+    width: 2.5rem;
+}
+
+.software, .language {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0.5rem 1rem;
+}
+
+@media all and (max-width: 970px) {
+    .skills {
+        flex-direction: column;
+    }
+}
+
+.software {
+    flex-basis: 70%;
+}
+
+.language {
+    flex-basis: 30%;
+}
+
+.software > * {
+    flex: 0 1 33%;
+    padding: 1rem;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.language > * {
+    flex: 0 1 50%;
+    padding: 1rem;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+
+/* skills */
