--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ font-family: 'Poppins', sans-serif;
 */
 
 :root {
+    --but-col : #FF007F;
     --gradient: linear-gradient(90deg, #d96459, #f2ae72, #a2836e, #588c7e, #622569);
 }
 
@@ -97,16 +98,29 @@ section:last-child {
 /* jiggly lines */
 
 .spacer {
-    aspect-ratio: 1080/300;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
+@media all and (min-width: 400px) {
+
+    .spacer {
+        aspect-ratio: 1080/300;
+    }
+}
+
+@media all and (max-width: 400px) {
+
+    .spacer {
+        aspect-ratio: 16/9;
+    }
+}
+
 .layer1 {
-    background-image: url(waves/col1.svg);
-    border-top: 2px solid #d96459;
+    background-image: url(waves/col_1_1.svg);
+    border-top: 2px solid #2F3028;
     border-bottom: 2px solid #f2ae72;
 }
 .layer2 {
@@ -130,7 +144,7 @@ section:last-child {
 /* colors */
 
 .col1 {
-    background: #d96459;
+    background: #2F3028;
 }
 .col2 {
     background: #f2ae72;
@@ -476,6 +490,70 @@ h1, p, h3, h4 {
 }
 /* wrapper */
 
+/* resume */
+
+.resume button {
+    cursor: pointer;
+    text-decoration: none;
+    letter-spacing: 0.1rem;
+    color: var(--but-col);
+    font-family: 'Poiret One', cursive;
+    font-size: 1rem;
+    font-weight: bold;
+    background: transparent;
+    padding: 0.4rem 0.7rem;
+    border: var(--but-col) 2px solid;
+    border-radius: 0.3rem;
+    text-shadow: 0 0 0.3rem var(--but-col);
+    box-shadow: inset 0 0 0.5rem 0 var(--but-col),
+    0 0 0.5rem 0 var(--but-col);
+    position: relative;
+    transition: 0.3s ease-in-out;
+}
+
+.resume button::before {
+    position: absolute;
+    content: ' ';
+    background: var(--but-col);
+    top: 140%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transform:  perspective(2rem) rotateX(40deg) scale(1, 0.35);
+
+    filter: blur(1.5rem);
+    opacity: 0.5;
+}
+
+.resume button::after {
+    position: absolute;
+    content: ' ';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 1rem 0.5rem var(--but-col);
+    opacity: 0;
+    transition: opacity 100ms linear;
+}
+
+.resume button:hover, .resume button:focus {
+    background: var(--but-col);
+    color: #2F3028;
+    text-shadow: none;
+}
+
+.resume button:hover::before {
+    opacity: 1;
+}
+
+.resume button:hover::after {
+    opacity: 1;
+}
+
+/* resume */
+
 /* socials */
 
 .socials {
@@ -605,6 +683,9 @@ h1, p, h3, h4 {
 
 
 
+
+
+
 /* contact me */
 
 .container {
@@ -655,16 +736,6 @@ h1, p, h3, h4 {
 .details > * :nth-child(1), .content > * :nth-child(1) {
     margin: 10px;
 }
-
-button {
-    background-color: crimson;
-    color: white;
-    margin: 5px;
-    padding: 5px;
-    border-radius: 30px;
-    box-shadow: 5px 5px 8px rgba(0 0 0 1);
-}
-
 /* details */
 
 /* table */
