--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ font-family: 'Poppins', sans-serif;
 
 :root {
     --but-col : #FF007F;
-    --gradient: linear-gradient(90deg, #d96459, #f2ae72, #a2836e, #588c7e, #622569);
+    --gradient: linear-gradient(90deg, #2F3028, #f2ae72, #C62368, #FCAF3C, #001122);
 }
 
 html {
@@ -98,13 +98,14 @@ section:last-child {
 /* jiggly lines */
 
 .spacer {
+    aspect-ratio: 960/300;
     width: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-@media all and (min-width: 500px) {
+/* @media all and (min-width: 500px) {
 
     .spacer {
         aspect-ratio: 1080/300;
@@ -116,27 +117,27 @@ section:last-child {
     .spacer {
         aspect-ratio: 16/9;
     }
-}
+} */
 
 .layer1 {
-    background-image: url(waves/col_1_1.svg);
+    background-image: url(waves/1.svg);
     border-top: 2px solid #2F3028;
     border-bottom: 2px solid #f2ae72;
 }
 .layer2 {
-    background-image: url(waves/col2.svg);
+    background-image: url(waves/2.svg);
     border-top: 2px solid #f2ae72;
-    border-bottom: 2px solid #a2836e;
+    border-bottom: 2px solid #C62368;
 }
 .layer3 {
-    background-image: url(waves/col3.svg);
-    border-top: 2px solid #a2836e;
-    border-bottom: 2px solid #588c7e;
+    background-image: url(waves/3.svg);
+    border-top: 2px solid #C62368;
+    border-bottom: 2px solid #FCAF3C;
 }
 .layer4 {
-    background-image: url(waves/col4.svg);
-    border-top: 2px solid #588c7e;
-    border-bottom: 2px solid #622569;
+    background-image: url(waves/4.svg);
+    border-top: 2px solid #FCAF3C;
+    border-bottom: 2px solid #001122;
 }
 
 /* jiggly lines */
@@ -150,13 +151,13 @@ section:last-child {
     background: #f2ae72;
 }
 .col3 {
-    background: #a2836e;
+    background: #C62368;
 }
 .col4 {
-    background: #588c7e;
+    background: #FCAF3C;
 }
 .col5 {
-    background: #622569;
+    background: #001122;
 }
 
 /* colors */
