--- a/style.css
+++ b/style.css
@@ -668,10 +668,50 @@ h1, p, h3, h4 {
     padding-bottom: 0.8rem;
 }
 
-
 /* socials */
 
+/*************************************************************************************************************************************************/
 
+.col3 {
+    padding-bottom: 50px;
+}
+
+.group-proj {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.project {
+    margin-left: 0.5rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 310px;
+    height: 560px;
+    border-radius: 10px;
+    padding: 0.5rem 0.5rem;
+    background: #f3f2ed;
+    color: #314837;
+    box-shadow: -6px -6px 20px rgba(255, 255, 255, 0.1), 
+    6px 6px 20px rgba(0, 0, 0, 0.3);
+}
+
+.pro-img svg {
+    width: 100px;
+}
+
+.project:hover {
+    box-shadow: inset -4px -4px 10px rgba(255, 255, 255, 0.7), 
+    inset 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.project:hover .pro-img, .project:hover .pro-cont {
+    transform: scale(0.98);
+}
+
+/*************************************************************************************************************************************************/
 
 
 
