--- a/style.css
+++ b/style.css
@@ -681,6 +681,7 @@ h1, p, h3, h4 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 
 .project {
@@ -690,8 +691,8 @@ h1, p, h3, h4 {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    width: 310px;
-    height: 560px;
+    width: 290px;
+    height: 590px;
     border-radius: 10px;
     padding: 0.3rem 0.5rem;
     background: #f3f2ed;
