--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ h1, p, h3, h4 {
     align-items: center;
     text-align: center;
     width: 290px;
-    height: 590px;
+    height: auto;
     border-radius: 10px;
     padding: 0.3rem 0.5rem;
     background: #f3f2ed;
