--- a/style.css
+++ b/style.css
@@ -685,8 +685,7 @@ h1, p, h3, h4 {
 }
 
 .project {
-    margin-left: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin: 0.2rem 0.2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
