--- a/style.css
+++ b/style.css
@@ -823,7 +823,7 @@ h1, p, h3, h4 {
 .vid {
     width: 300px;
     height: 169px;
-    margin: 0;
+    margin: 0.2rem;
 }
 
 .vid-details {
@@ -834,6 +834,16 @@ h1, p, h3, h4 {
     margin-bottom: 0.2rem;
     text-align: left;
     padding: 0.2rem;
+}
+
+.vid-details, .vid-cont {
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.vid, .vid-cont {
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 /* youtube */
