--- a/style.css
+++ b/style.css
@@ -818,6 +818,8 @@ h1, p, h3, h4 {
     justify-content: center;
     align-items: center;
     margin: 0.1rem 0.1rem;
+    box-shadow: -6px -6px 20px rgba(0, 0, 0, 0.1), 
+    6px 6px 20px rgba(0, 0, 0, 0.3);
 }
 
 .vid {
