--- a/style.css
+++ b/style.css
@@ -348,6 +348,122 @@ h1, p, h3, h4 {
 
 /* hover */
 
+/*************************************************************************************************************************************************/
+
+/* intro */
+
+.col1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.intro {
+    font-family: 'Times New Roman', Times, serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 40px;
+    margin-bottom: 40px;
+    
+    width: 360px;
+    height: 370px;
+    position: relative;
+}
+
+.intro span:nth-child(1) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: move-round 5s linear infinite;
+}
+
+.intro:hover span:nth-child(1) {
+    border: none;
+    background: rgba(255, 255, 255, 1);
+}
+
+.intro span:nth-child(2) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: move-round2 10s linear infinite;
+}
+
+.intro:hover span:nth-child(2) {
+    border: none;
+    background: rgba(255, 255, 255, 0.3);
+}
+
+.intro span:nth-child(3) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: move-round 7s linear infinite;
+}
+
+.intro:hover span:nth-child(3) {
+    border: none;
+    background: rgba(255, 255, 255, 0.7);
+}
+
+.intro span:nth-child(4) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 1px solid white;
+    border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+    transition: 0.5s;
+    animation: move-round2 3s linear infinite;
+}
+
+.intro:hover span:nth-child(4) {
+    border: none;
+    background: rgba(255, 255, 255, 0.5);
+}
+
+@keyframes move-round {
+    0% {transform:  rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
+@keyframes move-round2 {
+    0% {transform:  rotate(360deg);}
+    100% {transform: rotate(0deg);}
+}
+
+.intro-cont {
+    color: whitesmoke;
+    transition: 0.5s;
+    z-index: 1000;
+}
+
+.intro:hover .intro-cont {
+    color: black;
+}
+
+/* intro */
+
 /* skills */
 
 .skill-name {
