--- a/style.css
+++ b/style.css
@@ -677,13 +677,95 @@ h1, p, h3, h4 {
 
 /* socials */
 
-.socials {
+.icon-wrap {
+    position: relative;
+    width: 100%;
+    height: 500px;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+    list-style: none;
 }
 
-.social-ul {
+.icon-wrap .socials {
+    top: -50%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 5px 0;
+    white-space: nowrap;
+    transform: rotate(-30deg);
+}
+
+.icon-wrap .socials div {
+    white-space: nowrap;
+}
+
+.icon-wrap .socials div {
+    animation: move-side 40s linear infinite;
+    animation-delay: -20s;
+}
+
+.icon-wrap .socials div:nth-child(2) {
+    animation: move-side2 40s linear infinite;
+    animation-delay: -10s;
+}
+
+.icon-wrap .socials:nth-child(even) div {
+    animation: move-side3 40s linear infinite;
+    animation-delay: -20s;
+}
+
+.icon-wrap .socials:nth-child(even) div:nth-child(2) {
+    animation: move-side4 40s linear infinite;
+    animation-delay: -10s;
+}
+
+@keyframes move-side {
+    0% {transform: translateX(100%);}
+    100% {transform: translateX(-100%);}
+}
+
+@keyframes move-side2 {
+    0% {transform: translateX(0%);}
+    100% {transform: translateX(-200%);}
+}
+
+
+@keyframes move-side3 {
+    0% {transform: translateX(-100%);}
+    100% {transform: translateX(100%);}
+}
+
+@keyframes move-side4 {
+    0% {transform: translateX(-200%);}
+    100% {transform: translateX(0%);}
+}
+
+.socials div {
+    display: flex;
+}
+
+.socials li {
+    margin: 5px 10px;
+}
+
+.socials svg {
+    color: rgba(0, 0, 0, 0.5);
+    width: 64px;
+    transition: 1s;
+    user-select: none;
+}
+
+.socials svg:hover {
+    transition: 0s;
+    color: #39FF14;
+    filter: drop-shadow(0 0 7px #39FF14) ;
+}
+
+
+/* .social-ul {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -786,7 +868,7 @@ h1, p, h3, h4 {
     content: 'mail';
     font-size: 0.7rem;
     padding-bottom: 0.8rem;
-}
+} */
 
 /* socials */
 
