--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
     font-family: 'Poiret One', cursive;
     color: white;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 body {
@@ -209,15 +210,9 @@ h1, p, h3, h4 {
     border: 1px solid black;
     z-index: 1000;
     background-color: black;
-    background-image: var(--gradient);
+    background: red;
     background-size: 30rem;
     background-position: left;
-    animation: bg-ani 5s infinite alternate;
-}
-
-@keyframes bg-ani {
-    0% {background-position: left;}
-    100% {background-position: right;}
 }
 
 .navbar-nav {
@@ -304,7 +299,6 @@ h1, p, h3, h4 {
         width: 100vw;
         bottom: 0;
         height: 5rem;
-        background-color: black;
         background-size: 500vw;
     }
 
@@ -695,6 +689,7 @@ h1, p, h3, h4 {
     padding: 1px;
 }
 
+
 .icon-wrap .socials {
     flex: 1 1 100%;
     padding: 1px 0;
@@ -751,15 +746,14 @@ h1, p, h3, h4 {
     100% {transform: translateX(0%);}
 }
 
-
-.socials > * {
+.icon-wrap .socials > * {
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .socials li {
-    margin: 5px 10px;
+    margin: 5px 5px;
 }
 
 .socials svg {
@@ -774,112 +768,6 @@ h1, p, h3, h4 {
     color: #39FF14;
     filter: drop-shadow(0 0 7px #39FF14) ;
 }
-
-
-/* .social-ul {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    flex-wrap: wrap;
-}
-
-.social-ul > * {
-    justify-content: space-evenly;
-    margin: 0 0.5rem;
-}
-
-.social-ul li {
-    flex: 0 1 30%;
-    height: 70px;
-    width: 70px;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    background: white;
-    border-radius: 50px;
-    margin: 1rem 0.5rem;
-    transition: 0.2s ease-in-out;
-}
-
-.social-ul svg {
-    width: 30px;
-    color: black;
-    transition: 0.5s ease-in-out;
-}
-
-.social-ul li:hover {
-    background: white;
-    border-radius: 100px;
-    transform: scale(1.2);
-    transition: 0.2s ease-in-out;
-}
-
-.social-ul li:hover svg {
-    transform: scale(0.7);
-}
-
-.social-ul .whatsapp:hover svg {
-    color: #25D366;
-}
-.social-ul .whatsapp:hover::after {
-    color: black;
-    content: 'whatsapp';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-}
-
-.social-ul .youtube:hover svg {
-    color: #FF0000;
-}
-.social-ul .youtube:hover::after {
-    color: black;
-    content: 'youtube';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-}
-
-.social-ul .linkedin:hover svg {
-    color: #0077b5;
-}
-.social-ul .linkedin:hover::after {
-    color: black;
-    content: 'linkedin';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-}
-
-.social-ul .twitter:hover svg {
-    color: #1DA1F2;
-}
-.social-ul .twitter:hover::after {
-    color: black;
-    content: 'twitter';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-}
-
-.social-ul .instagram:hover svg {
-    color: #bc2a8d;
-}
-.social-ul .instagram:hover::after {
-    color: black;
-    content: 'instagram';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-}
-
-.social-ul .mail:hover svg {
-    color: #FF8C00;
-}
-.social-ul .mail:hover::after {
-    color: black;
-    content: 'mail';
-    font-size: 0.7rem;
-    padding-bottom: 0.8rem;
-} */
 
 /* socials */
 
@@ -943,20 +831,6 @@ h1, p, h3, h4 {
 .project.active .pro-cont::before {
     background: transparent;
 }
-
-/* .project .more {
-    position: absolute;
-    bottom: 0px;
-    display: flex;
-    background: linear-gradient(transparent, #f3f2ed);
-    width: 100%;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    z-index: 1;
-} */
 
 .project .more {
     position: relative;
@@ -1078,77 +952,3 @@ h1, p, h3, h4 {
 
 
 
-/* contact me */
-
-.container {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: fit-content;
-    margin-top: 10px;
-    justify-content: space-around;
-    text-align: center;
-}
-
-@media all and (max-width: 650px) {
-    .container {
-        flex-direction: column;
-        justify-content: space-around;
-    }
-
-    .col5 > * {
-        justify-content: space-between;
-    }
-}
-
-
-.contact-left {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 60%;
-    background-color: blanchedalmond;
-    padding: 20px;
-    color: black;
-}
-.contact-right {
-    display: flex;
-    flex-direction: column;
-    flex-basis: 40%;
-    background-color: crimson;
-    padding: 20px;
-}
-
-/* details */
-
-.details > *, .content > *{
-    display: flex;
-    flex-direction: column;
-}
-
-.details > * :nth-child(1), .content > * :nth-child(1) {
-    margin: 10px;
-}
-/* details */
-
-/* table */
-
-tr td:first-child {
-    padding-right: 20px;
-}
-
-tr td {
-    font-size: 1rem;
-    padding-top: 20px;
-}
-
-table {
-    padding: 15vh 0;
-}
-
-@media all and (max-width: 650px) {
-    table {
-        padding: 3vh 0;
-    }
-}
-
-/* table*/
