--- a/style.css
+++ b/style.css
@@ -873,12 +873,12 @@ h1, p, h3, h4 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-left: 10px dotted;
 
     background-image: url(waves/paper.jpg);
     background-size: cover;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3),
-     -5px -0px 10px rgba(0, 0, 0, 0.3),
-     5px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3),
+     10px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .timeline .paper-cont {
