--- a/style.css
+++ b/style.css
@@ -873,22 +873,36 @@ h1, p, h3, h4 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-left: 10px dotted;
-
-    background-image: url(waves/paper.jpg);
-    background-size: cover;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3),
-     10px 0px 20px rgba(0, 0, 0, 0.3);
 }
 
 .timeline .paper-cont {
-    width:100%;
+    flex-basis: 50%;
+    width: 100%;
     height: auto;
     margin-top: 5px;
     margin-bottom: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url(waves/paper.jpg);
+    background-size: cover;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+    border-left: 10px dotted;
+    transition: 0.5s;
+}
+
+.paper-cont:nth-child(odd) {
+    transform: rotate(-2deg);
+}
+
+.paper-cont:nth-child(even) {
+    transform: rotate(2deg);
+}
+
+.paper-cont:hover {
+    transition: 0s;
+    transform: rotate(0deg);
+    z-index: 10;
 }
 
 .paper-cont > * {
